Fix minor bug (opening menus on mobile).

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -29,7 +29,7 @@ body{
 
 #site-header.open{
   a{
-    left: 0 !important;
+    margin-left: 0 !important;
   }
 }
 
